KAW-8165 Fix gap between heading and paragraph

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -257,6 +257,10 @@ main .hero-container .hero-wrapper {
     padding: 0 0 0 100px;
   }
 
+  .hero .hero-text-wrapper .h1 {
+    margin-bottom: 24px;
+  }
+
   .hero .hero-pause-button {
     right: 100px;
   }
